src/objects/mfiflexUtil__Log__c.object
<CustomObject>
    <fields>
        <fullName>mfiflexUtil__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mfiflexUtil__Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mfiflexUtil__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debug</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>